...
    <string name="welcome_text">Welcome to Istoriya</string>
    <string name="app_description">Istoriya is an app for sharing interesting daily stories</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your Email</string>
    <string name="password_hint">Enter your password</string>
    <string name="logout_text">Logout</string>
    <string name="setting_text">Setting</string>
    <string name="this_is_story_photo">This is a story photo</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please insert an image file first.</string>
...
